# COSMOS77-ex04

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANUAL_STEPS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: GRAPH_REPORT.md  graph.json
config/: logging_config.json  providers.json  setup.json
docs/: ACCEPTANCE.md  PLAN.md  PRD.md  PRD_agent.md  PRD_bugfix.md  PRD_extensions.md  PRD_graphify.md  PRD_reveng.md  PRD_spec_sheet.md  PRD_target.md  PRD_tokens.md  PRD_vault.md  TODO.md
docs/prompts/: 000_phase0_bootstrap.md  001_phase1_docs.md  002_phase2_target.md  003_phase3_graphify.md  004_phase4_vault.md  005_phase5_reveng.md  006_phase6_agent.md  007_phase7_fix.md  008_phase8_tokens.md  009_phase9_extensions.md  010_phase10_readme.md  011_phase11_qa.md  012_phase12_submit.md
obsidian/: fix-process.md  hot.md  index.md  investigation.md  suspects.md
obsidian/pages/: Bar.md  Community 0.md  Community 1.md  Community 10.md  Community 11.md  Community 12.md  Community 13.md  Community 14.md  Community 15.md  Community 16.md  Community 17.md  Community 18.md  Community 19.md  Community 2.md  Community 20.md  Community 21.md  Community 22.md  Community 23.md  Community 24.md  Community 25.md  Community 26.md  Community 27.md  Community 3.md  Community 4.md  Community 5.md  Community 6.md  Community 7.md  Community 8.md  Community 9.md  Comparable.md  DiscreteTimer.md  StringIO.md  TMonitor.md  TqdmDefaultWriteLock.md  TqdmDeprecationWarning.md  __init__.py.md  _utils.py.md  closing().md  getvalue().md  std.py.md  (+3 more)
reports/: ARCHITECTURE.md  BUG_ANALYSIS.md  IMPACT.md  ORPHANS.md  SPEC_SHEET.md  TOKEN_COMPARISON.md
scripts/: generate_cover_pdf.py
src/cosmos77_ex04/: __init__.py  constants.py
src/cosmos77_ex04/agent/: analysis.py  fix.py  fix_report.py  graph.py  llm.py  nodes.py  retrieval.py  state.py
src/cosmos77_ex04/cli/: main.py
src/cosmos77_ex04/extensions/: centrality_rank.py  dynamic_hot.py  impact_report.py  orphans.py  run.py
src/cosmos77_ex04/graphify/: fallback.py  model.py  report.py  run.py
src/cosmos77_ex04/reveng/: block_diagram.py  extract.py  godnodes.py  oop_schema.py  report.py
src/cosmos77_ex04/sdk/: sdk.py
src/cosmos77_ex04/shared/: config.py  gatekeeper.py  logging_setup.py  version.py
src/cosmos77_ex04/tokens/: baseline.py  chart.py  compare.py  run.py  spec_sheet.py
src/cosmos77_ex04/vault/: build.py  links.py  pages.py  render.py  wikilinks.py
tests/: conftest.py
tests/unit/: test_constants.py
tests/unit/test_agent/: test_fix.py  test_fix_report.py  test_graph.py  test_retrieval.py  test_sdk_agent.py  test_sdk_fix.py
tests/unit/test_extensions/: conftest.py  test_centrality_rank.py  test_dynamic_hot.py  test_impact_report.py  test_orphans.py  test_run.py  test_sdk_extensions.py
tests/unit/test_graphify/: test_fallback.py  test_model.py  test_report.py  test_run.py
tests/unit/test_reveng/: conftest.py  test_extract.py  (+3 more)
(+19 files in other folders)
